[gd_scene load_steps=23 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Boss/Boss.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/ChakraPetch-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Font/ChakraPetch-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Level/Level.gd" type="Script" id=5]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=6]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 0, -126.227 )
b = Vector2( 0, 955.385 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 0, -3.767 )
b = Vector2( 0, 730.206 )

[sub_resource type="DynamicFont" id=3]
size = 128
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 128
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 128
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 32
outline_size = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 32
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 128
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 452.637, 10 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 18.1653, 625.169 )

[node name="Level" type="Node2D"]
pause_mode = 2
position = Vector2( 600, 0 )
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 1000 )
scale = Vector2( 0.25, 0.25 )

[node name="Boss" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 225.907 )

[node name="LevelBorders" type="StaticBody2D" parent="."]

[node name="LeftBoundary" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2( -1.50747, 124.726 )
shape = SubResource( 1 )

[node name="RightBoundary" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2( 721.51, 124.726 )
shape = SubResource( 1 )

[node name="TopBoundary" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2( 0, -1.53553 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="BottomBoundary" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2( 0, 1081.44 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="Overlay" type="CanvasLayer" parent="."]

[node name="HUD" parent="Overlay" instance=ExtResource( 6 )]

[node name="PauseMenu" type="Control" parent="Overlay"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Overlay/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.5
margin_top = -364.5
margin_right = 283.5
margin_bottom = -27.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME
PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameResumeButton" type="Button" parent="Overlay/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 150.0
margin_right = 65.0
margin_bottom = 198.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameRestartButton" type="Button" parent="Overlay/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 225.0
margin_right = 65.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REPLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameToMenuButton" type="Button" parent="Overlay/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = 300.0
margin_right = 74.5
margin_bottom = 348.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameQuitButton" type="Button" parent="Overlay/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = 375.0
margin_right = 41.5
margin_bottom = 423.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WonGame" type="Control" parent="Overlay"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Overlay/WonGame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -283.5
margin_top = -280.0
margin_right = 283.5
margin_bottom = -112.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YOU WIN!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="Overlay"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Overlay/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -359.5
margin_top = -364.5
margin_right = 359.5
margin_bottom = -27.5
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME
OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndButtons" type="Control" parent="Overlay"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="Overlay/EndButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 225.0
margin_right = 65.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "REPLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToMenuButton" type="Button" parent="Overlay/EndButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = 300.0
margin_right = 74.5
margin_bottom = 348.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "TO MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Overlay/EndButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = 375.0
margin_right = 41.5
margin_bottom = 423.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossHealth" type="Label" parent="Overlay"]
visible = false
margin_left = 445.238
margin_top = -2.17839
margin_right = 724.238
margin_bottom = 57.8216
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BossHealth"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnpauseLabel" type="Label" parent="Overlay"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -273.0
margin_top = -83.5
margin_right = 273.0
margin_bottom = 83.5
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TimeLeft"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timers" type="Node" parent="."]

[node name="UnpauseTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="BulletDespawnPoint" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDespawnPoint"]
position = Vector2( 360.338, -62.9961 )
shape = SubResource( 15 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BulletDespawnPoint"]
position = Vector2( 360.338, 1138.97 )
shape = SubResource( 15 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="BulletDespawnPoint"]
position = Vector2( -104.881, 536.394 )
shape = SubResource( 16 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="BulletDespawnPoint"]
position = Vector2( 827.065, 536.394 )
shape = SubResource( 16 )

[connection signal="pressed" from="Overlay/PauseMenu/InGameResumeButton" to="." method="_on_InGameResumeButton_pressed"]
[connection signal="pressed" from="Overlay/PauseMenu/InGameRestartButton" to="." method="_on_InGameRestartButton_pressed"]
[connection signal="pressed" from="Overlay/PauseMenu/InGameToMenuButton" to="." method="_on_InGameToMenuButton_pressed"]
[connection signal="pressed" from="Overlay/PauseMenu/InGameQuitButton" to="." method="_on_InGameQuitButton_pressed"]
[connection signal="pressed" from="Overlay/EndButtons/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="Overlay/EndButtons/ToMenuButton" to="." method="_on_ToMenuButton_pressed"]
[connection signal="pressed" from="Overlay/EndButtons/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="Timers/UnpauseTimer" to="." method="_on_UnpauseTimer_timeout"]
[connection signal="area_entered" from="BulletDespawnPoint" to="." method="_on_BulletDespawnPoint_area_entered"]
